tests/data/motifs/bad/test_pwms_bad6.motifscan
>MA0006.1	Ahr::Arnt	PWM
A [ not a num ]